--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,8 +5,7 @@
   max-width: 500px;
   border: 1px solid #e0e0e0;
 }
-vv
-.search:hover {
+vv .search:hover {
   background-color: rgba(255, 255, 255, 0.25);
 }
 
@@ -74,4 +73,4 @@ vv
 
 .loginButton {
   margin-left: 16px;
-} 
+}
