Update nuser page
Cập nhật chức năng xem profile nurse, xem danh sách heathprofile của học sinh, chỉnh sửa lại api kết nối redux

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,8 @@
   max-width: 500px;
   border: 1px solid #e0e0e0;
 }
-vv .search:hover {
+vv
+.search:hover {
   background-color: rgba(255, 255, 255, 0.25);
 }
 
@@ -73,4 +74,4 @@ vv .search:hover {
 
 .loginButton {
   margin-left: 16px;
-}
+} 
