--- a/src/pages/home-pages/ParentForm/MedicationForm.css
+++ b/src/pages/home-pages/ParentForm/MedicationForm.css
@@ -2,6 +2,7 @@
 .medication-form-container {
   width: 100vw;
   min-height: 100vh;
+
   background-color: #f5f5f5;
   padding: 24px;
   display: flex;
@@ -13,6 +14,7 @@
   background: #fff;
   padding: 24px;
   border-radius: 10px;
+  margin: 0px 0px 0px 180px; 
   width: 100%;
   max-width: 1000px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
